--- a/filecode/person.html
+++ b/filecode/person.html
@@ -17,7 +17,7 @@
     <!--Add this-->
 
     <link href='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css' rel='stylesheet'>
-    <title>Bloodlife</title>
+    <title>Person</title>
 
 </head>
 
