--- a/filecode/personadmin.html
+++ b/filecode/personadmin.html
@@ -18,7 +18,7 @@
     <!--Add this-->
 
     <link href='https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css' rel='stylesheet'>
-    <title>Bloodlife</title>
+    <title>Admin</title>
 
 </head>
 
