--- a/filecode/appointment.html
+++ b/filecode/appointment.html
@@ -36,7 +36,7 @@
     />
     <!--Add this-->
 
-    <title>Bloodlife</title>
+    <title>Appointment</title>
   </head>
   <body>
     <div class="navigation">
